Fix visibility bug

--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -62,6 +62,7 @@ body {
 }
 
 #logged-out-main-content {
+    display: flex;
     position: absolute;
     top: 0;
     left: 0;
